--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS PROJECT</title>
+    <title>CSS PROJECT: Gym</title>
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="styles.css" />
     <script
@@ -82,19 +82,21 @@
           </p>
 
           <p>
-            At our gym you’ll find all the latest strength and cardio equipment
-            along with an energetic group exercise program that includes POUND,
-            Zumba, Kickboxing, Bootcamp, Muscle Building and many other cardio
-            CLASSES. You’ll find a supportive environment with all kinds of
-            people who are working just as hard as you to meet their goals.
+            At our gym you will find all the latest strength and cardio
+            equipment along with an energetic group exercise program that
+            includes POUND, Zumba, Kickboxing, Bootcamp, Muscle Building and
+            many other cardio CLASSES. You will find a supportive environment
+            with all kinds of people who are working just as hard as you to meet
+            their goals.
           </p>
 
           <p>
-            Our Staff, Trainers & Group Exercise Instructors are committed to
-            offering our members a great fitness experience. Whether you’re lazy
-            looking to get back into shape, a marathon runner trying to shave a
-            few minutes off your personal best or just trying to stay healthy we
-            would love to help you realize your potential and meet your goals!
+            Our Staff, Trainers and Group Exercise Instructors are committed to
+            offering our members a great fitness experience. Whether you are
+            lazy looking to get back into shape, a marathon runner trying to
+            shave a few minutes off your personal best or just trying to stay
+            healthy we would love to help you realize your potential and meet
+            your goals!
           </p>
           <a href="#" class="btn"> read more </a>
         </div>
